--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,14 @@
 .App-link {
   color: #09d3ac;
 }
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  cursor: pointer;
+}
+li:hover {
+  color: blue;
+}
